required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.


Current Version (5.1-dev, SVN trunk):
-------------------------------------

- WCS: respect wcs_name metadata for GetCoverage and DescribeCoverage requests
  (#2036)

- CGI: added -nh option to allow for the suppression of content headers from
  the command line (#2594)

- PostGIS: fix postgis idle-in-transaction problem (#2626)

- AGG: enable ellipse symbol rotation for POINT/ANNOTATION layers (#2617)

- RFC36: add more extensions to support templates (#2576)

- AGG: allow dashed hatch symbols (#2614)

- AGG: enable offset lines of type x -99 (#2588)

- AGG: use an agg specific label size calculation function where possible (#2357)

- mapogcsld.c: fetch TextSymbolizer/Label/ogc:PropertyName correctly (#2611)

- Don't ignore .qix file when DATA reference includes .shp extension (#590)

- CGI able to alter layers with space and underscores (#2516)

- WFS Multipoint query with PostGIS bug fixed (#2443)

- Tiling API (RFC 43) mode=tile, tilemode=spheremerc, tile=x y zoom (#2581)

- Remove C++-style comments and most other warnings thrown by -pedantic (#2598)

- Fix PostGIS transaction behavior in fcgi situations (#2497, #2613)

- Improve performance for large shape files (#2282)

- encode WMS parameters correctly (#1296)

- Added alignment option within a scalebar (#2468)

- RFC-42 HTTP Cookie Forwarding (#2566)

- Fixed handling of encrypted connection strings in postgis driver (#2563)

- mapagg.cpp: AGG: add opacity at the style level (#1155)

- mapwms.c: add Cache-Control max-age HTTP header support (#2551)

- mapogcsos.c: support URI encoded procedures correctly (#2547)

- Added support for EMPTY template with WMS GetFeatureInfo (#546)
